--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -43,7 +43,7 @@ a {
    text-decoration: none;
 }
 
-/* Стили для формы */
+/* Стилі для форм */
 .form {
    max-width: 400px;
    margin: 0 auto;
